Updates from Overleaf

--- a/Hw2/repo/analysis/tables/blp_q8_newton_results.tex
+++ b/Hw2/repo/analysis/tables/blp_q8_newton_results.tex
@@ -2,14 +2,13 @@
     \centering
     \caption{Newton Estimation Results For BLP ($\alpha$ And $\sigma$) With EHW SE}
     \label{tab:blp_q8_newton_results}
-\toprule
 \begin{tabular}{lrr}
 \toprule
-parameter & estimate & se_ehw \\
+parameter & estimate & se\_ehw \\
 \midrule
 \midrule
-alpha & -4.5648 & 0.0000 \\
-sigma & 148.3389 & 0.0000 \\
+alpha & -4.5648 & 0.0001 \\
+sigma & 148.3389 & 1.8862 \\
 \bottomrule
 \bottomrule
 \end{tabular}
