--- a/Hw2/repo/analysis/tables/q10_results_city1_period1_single_market.tex
+++ b/Hw2/repo/analysis/tables/q10_results_city1_period1_single_market.tex
@@ -1,8 +1,7 @@
-\begin{table}[htbp]
+\begin{table}[H]
     \centering
     \caption{Prices, Shares, Markups, And Marginal Costs (City 1, Period 1)}
     \label{tab:q10_results_city1_period1_single_market}
-\toprule
 \begin{tabular}{rlrrrr}
 \toprule
 product & owner & price & share & markup & mc \\
