--- a/Hw2/repo/analysis/tables/q11_prices_counterfactual_city1_period1.tex
+++ b/Hw2/repo/analysis/tables/q11_prices_counterfactual_city1_period1.tex
@@ -1,18 +1,17 @@
-\begin{table}[htbp]
+\begin{table}[H]
     \centering
     \caption{Observed vs Counterfactual Prices After Merger (City 1, Period 1)}
     \label{tab:q11_prices_counterfactual_city1_period1}
+\begin{tabular}{rrrrr}
 \toprule
-\begin{tabular}{rrr}
-\toprule
-product & price_old & price_new \\
+product & price\_old & price\_new & Logit & Nested Logit \\
 \midrule
 \midrule
-1.0000 & 0.7944 & 0.7932 \\
-2.0000 & 1.1437 & 1.4866 \\
-3.0000 & 1.1410 & 1.5404 \\
-4.0000 & 0.9037 & 0.9030 \\
-5.0000 & 0.4919 & 0.4909 \\
+1.0000 & 0.7944 & 0.7932 & 0.7973 & 0.7987 \\
+2.0000 & 1.1437 & 1.4866 & 1.1882 & 1.3704 \\
+3.0000 & 1.1410 & 1.5404 & 1.1997 & 1.4081 \\
+4.0000 & 0.9037 & 0.9030 & 0.9056 & 0.9063\\
+5.0000 & 0.4919 & 0.4909 & 0.4943 & 0.4953 \\
 \bottomrule
 \bottomrule
 \end{tabular}
