--- a/Hw2/repo/analysis/tables/q12_welfare_city1_period1.tex
+++ b/Hw2/repo/analysis/tables/q12_welfare_city1_period1.tex
@@ -2,10 +2,9 @@
     \centering
     \caption{Consumer Surplus Before/After Merger (City 1, Period 1)}
     \label{tab:q12_welfare_city1_period1}
-\toprule
 \begin{tabular}{rrrrr}
 \toprule
-city & period & CS_no_merger & CS_merger & Delta_CS \\
+city & period & CS\_no\_merger & CS\_merger & Delta\_CS \\
 \midrule
 \midrule
 1.0000 & 1.0000 & 0.4122 & 0.3247 & -0.0874 \\
