--- a/Hw2/repo/analysis/tables/q2_delta_city1_period1_sigma0p0.tex
+++ b/Hw2/repo/analysis/tables/q2_delta_city1_period1_sigma0p0.tex
@@ -2,10 +2,9 @@
     \centering
     \caption{Delta Comparison in City 1, Period 1 (\(\sigma=0.0\))}
     \label{tab:q2_delta_city1_period1_sigma0p0}
-\toprule
 \begin{tabular}{rrrrrr}
 \toprule
-city & period & product & delta_hat & delta_log_s_minus_log_s0 & difference \\
+city & period & product & delta\_hat & delta\_log\_s\_minus\_log\_s0 & difference \\
 \midrule
 \midrule
 1.0000 & 1.0000 & 1.0000 & -0.5791 & -0.5791 & -0.0000 \\
