--- a/Hw2/repo/analysis/tables/q9_diversion_city1_period1.tex
+++ b/Hw2/repo/analysis/tables/q9_diversion_city1_period1.tex
@@ -1,8 +1,7 @@
-\begin{table}[htbp]
+\begin{table}[H]
     \centering
     \caption{Diversion Ratios, City 1, Period 1}
     \label{tab:q9_diversion_city1_period1}
-\toprule
 \begin{tabular}{rrrrr}
 \toprule
 to 1 & to 2 & to 3 & to 4 & to 5 \\
