--- a/Hw2/repo/analysis/tables/q9_elasticities_city1_period1.tex
+++ b/Hw2/repo/analysis/tables/q9_elasticities_city1_period1.tex
@@ -1,8 +1,7 @@
-\begin{table}[htbp]
+\begin{table}[H]
     \centering
     \caption{Own- And Cross-Price Elasticities, City 1, Period 1}
     \label{tab:q9_elasticities_city1_period1}
-\toprule
 \begin{tabular}{rrrrr}
 \toprule
 p@1 & p@2 & p@3 & p@4 & p@5 \\
