--- a/Hw2/repo/paper_slides/code/paper.tex
+++ b/Hw2/repo/paper_slides/code/paper.tex
@@ -59,382 +59,188 @@
 
 \begin{spacing}{1.4}
 
-\section{Logit Demand Model with exogenous prices}
+\section{Question 1}
 
-\subsection*{Question 1}
+See ``Hw2/repo/analysis/code/q1\_shares\_module.py" as reference of calculating market shares.
 
-After normalizing calories, added sugar, and protein by package size, we construct a summary table of products available in city 1 during period 1, see below.
-
-\input{Hw1/repo/analysis/output/q1_city1_period1_table}
-
-From this table, we find that:
-
-The two most expensive products are Chobani (price = 1.144) and Dannon (price = 1.141).
-
-The two products with the largest market shares are Yoplait (market share = 16.6 \%) and Chobani (market share = 16.4 \%).
+\section{Question 2}
 
 
-\subsection*{Question 2}
+See ``Hw2/repo/analysis/code/q2\_invert.py" as reference of the algorithm. The values of $\delta$ are presented below. We can have $log(s_{jct}) - log(s_{0ct}) = \delta_{jct}$.
 
-Let utility be
+\input{Hw2/repo/analysis/tables/q2_delta_city1_period1_sigma0p0}
+
+\section{Question 3}
+
+
+Let $s(\delta,\sigma)$ denote the $J$-vector of market shares implied by the random-coefficients logit with a single random coefficient on $x_j=X_j^s-\bar X^s$. For each simulation draw $i$ with $v_i$ we define
 \[
-u_{ijct} = -\alpha p_{jct} + \beta X_{j} + \xi_{jct} + \varepsilon_{ijct},
-\]
-with $\varepsilon_{ijct}\stackrel{iid}{\sim} \text{EV Type I}$ and the outside option
-normalized to $u_{i0ct}=\varepsilon_{i0ct}$. Define the mean utility
-\[
-\delta_{jct}\equiv -\alpha p_{jct} + \beta X_{j} + \xi_{jct}.
-\]
-
-Under the multinomial logit, consumer $i$ chooses product $j$ iff $u_{ijct}\ge u_{ikct}$ for all $k$.
-Aggregating over consumers yields the market share of product $j$ in market $(c,t)$:
-\[
-s_{jct} \;=\; 
-\frac{\exp(\delta_{jct})}{1+\sum_{k=1}^{jct}\exp(\delta_{kct})},
+s_{ij}=\frac{\exp\{\delta_j+\sigma v_i x_j\}}{1+\sum_{m=1}^J \exp\{\delta_m+\sigma v_i x_m\}},
 \qquad
-s_{0ct} \;=\;
-\frac{1}{1+\sum_{k=1}^{jct}\exp(\delta_{kct})}.
+s_i=(s_{i1},\ldots,s_{iJ})^\top,
 \]
+and approximate $s(\delta,\sigma)=\mathbb{E}_i[s_i]$ by averaging over the $N$ draws.
 
-Taking the ratio $s_{jct}/s_{0ct}$ and logs gives the standard logit inversion:
+Observed shares satisfy the implicit system $s(\delta(\sigma),\sigma)=s^{\text{obs}}$. By the Implicit Function Theorem,
 \[
-\log s_{jct} - \log s_{0ct}
-\;=\;
-\delta_{jct}
-\;=\;
--\alpha p_{jct} + \beta X_{j} + \xi_{jct}.
+\frac{\partial \delta}{\partial \sigma}
+= -\left(\frac{\partial s}{\partial \delta}\right)^{-1}
+\left(\frac{\partial s}{\partial \sigma}\right).
 \]
-
-Hence, for each market $(c,t)$ the demand system consists of $jct$ equations,
-each depending only on product $j$'s own price and characteristics:
+For a given draw $i$,
 \[
-\boxed{\;
-\log s_{jct} - \log s_{0ct}
-\;=\;
--\alpha p_{jct} + \beta X_{j} + \xi_{jct},
-\qquad j=1,\dots,jct.
-\;}
-\]
-
-\subsection*{Question 3}
-
-Under the assumption $\mathbb{E}[\xi_{jct}\mid p_{jct},X_j]=0$, we estimate the
-inverted logit demand equation
-\[
-\log s_{jct}-\log s_{0ct}
-= -\alpha\, p_{jct} + \beta_1\text{weight}_j + \beta_2\text{cal/g}_j
-  + \beta_3\text{sugar/g}_j + \beta_4\text{protein/g}_j + \xi_{jct}.
-\]
-We compute $s_{0ct}$ as one minus the sum of inside shares in each market $(c,t)$. The results are presented in \ref{tab:q3_ols_ehw}.
-
-\input{Hw1/repo/analysis/output/q3_ols_ehw}
-
-
-\subsection*{Question 4}
-
-We have
-
-Own-price elasticity:
-   \[
-   \varepsilon_{jj}
-   = \frac{\partial s_j}{\partial p_j}\cdot \frac{p_j}{s_j}
-   = -\alpha p_j (1-s_j).
-   \]
-
-Cross-price elasticity:
-   \[
-   \varepsilon_{jm}
-   = \frac{\partial s_j}{\partial p_m}\cdot \frac{p_m}{s_j}
-   = \alpha p_m s_m.
-   \]
-
-Outside option (j=0):
-   \[
-   s_0 = 1 - \sum_{j=1}^J s_j, \qquad
-   \varepsilon_{0m}
-   = \frac{\partial s_0}{\partial p_m}\cdot \frac{p_m}{s_0}
-   = \alpha p_m s_m \cdot \frac{s_0}{s_0} = \alpha p_m s_m.
-   \]
-
-Table \ref{tab:q4_elasticity_city1p1} reports the own price and cross-price elasticity in City 1, Period 1.
-
-\input{Hw1/repo/analysis/output/q4_elasticities_city1p1}
-
-
-\subsection*{Question 5}
-\input{Hw1/repo/analysis/output/q5_diversion_city1p1}
-
-\subsection*{Question 6}
-
-For a single-product firm $j$ in market $(c,t)$, profit is
-\[
-\Pi_{jct} = M_{ct}\,(p_{jct} - c_{jct})\, s_{jct}(p_{jct}),
-\]
-where $s_{jct}$ follows the logit demand with
-$\log s_{jct}-\log s_{0ct} = -\alpha p_{jct} + \beta'X_j + \xi_{jct}$.
-The first-order condition is
-\[
-0 = \frac{\partial \Pi_{jct}}{\partial p_{jct}}
-= s_{jct}(p) + (p_{jct}-c_{jct}) \frac{\partial s_{jct}(p)}{\partial p_{jct}}.
-\]
-Using the logit derivative
-$\frac{\partial s_{jct}}{\partial p_{jct}} = -\alpha\, s_{jct}(1-s_{jct})$,
-we obtain the markup:
-\[
-p_{jct} - c_{jct} = \frac{1}{\alpha(1-s_{jct})},
-\qquad\text{so}\qquad
-c_{jct} = p_{jct} - \frac{1}{\alpha(1-s_{jct})}.
-\]
-
-
-\subsection*{Question 7}
-
-Using the single-product markup formula from Question 6, we have
-\[
-c_{jct} = p_{jct} - \frac{1}{\alpha(1-s_{jct})}
-\]
-Plugging in our estimates ($\hat\alpha\simeq 0.8643$) and the observed
-prices and shares in city 1, period 1, we obtain:
-
-\input{Hw1/repo/analysis/output/q7_mc_city1p1}
-
-Answer: Not all costs are greater than zero; in fact, all recovered costs are
-negative in this simple OLS logit setup. 
-
-\subsection*{Question 8}
-
-In the inverted-logit equation
-\(
-\log s_{jct}-\log s_{0ct}=-\alpha p_{jct}+\beta'X_j+\xi_{jct},
-\)
-prices are typically endogenous: positive demand shocks $\xi_{jct}$
-(brand quality, promotions, shelf placement, etc.) induce firms to raise prices,
-so $\mathrm{Cov}(p_{jct},\xi_{jct})>0$.
-If we estimate by OLS imposing $\mathbb{E}[\xi\mid p,X]=0$,
-the price coefficient $-\alpha$ is biased upward (less negative), hence $\hat\alpha$
-is biased downward. Because the implied markup is
-\(
-p_j-c_j=\frac{1}{\alpha(1-s_j)},
-\)
-a downward-biased $\hat\alpha$ yields over-estimated markups and thus
-under-estimated marginal.
-
-\section{Logit Demand Model with three way fixed effects}
-
-\subsection*{Question 9}
-Consider the inverted-logit estimating equation
-\[
-\log s_{jct}-\log s_{0,ct}
-= -\alpha\,p_{jct} \;+\; \tau_j \;+\; \tau_c \;+\; \tau_t \;+\; \varepsilon_{jct},
-\]
-where $\tau_j$ (product FE), $\tau_c$ (city FE), and $\tau_t$ (period FE) are unrestricted
-additive terms. The product FE absorbs time- and market-irrelevant quality/brand effect that
-is typically positively correlated with prices (``high-quality--high-price''), the city FE absorbs
-location-wide demand and cost shifters, and the period FE absorbs aggregate shocks (inflation,
-seasonality, national advertising, etc.). Those fixed effects absorbed a large part of the omitted-variable bias present in the previous OLS without FE.
-
-However, the unobserved, market-specific quality $\xi_{jct}$ (e.g., promotion, shelf placement)
-may still be correlated with prices within a market, so three-way FE do not in general solve price
-endogeneity. Instruments or cost shifters are still needed for full identification.
-
-\subsection*{Question 10}
-
-We estimate
-\[
-\log s_{jct}-\log s_{0,ct}
-= -\alpha\,p_{jct} + \tau_j + \tau_c + \tau_t + \varepsilon_{jct}
-\]
-by OLS with EHW (HC1) standard errors and product/city/period fixed effects.
-Given the FE estimate $\hat\alpha$, market prices $p_{j11}$ and shares $s_{j11}$, own- and
-cross-price elasticities in a multinomial logit are
-\[
-\varepsilon_{jj,11} = \frac{\partial s_{j11}}{\partial p_{j11}}\frac{p_{j11}}{s_{j11}}
-= -\hat\alpha\,p_{j11}\,(1-s_{j11}),
+\frac{\partial s_i}{\partial \delta}
+=\operatorname{diag}(s_i)-s_i s_i^{\top},
 \qquad
-\varepsilon_{jk,11}
-= \frac{\partial s_{j11}}{\partial p_{k11}}\frac{p_{k11}}{s_{j11}}
-= \hat\alpha\,p_{k11}\,s_{k11} \quad (k\neq j).
+\left(\frac{\partial s_i}{\partial \sigma}\right)_j
+= v_i\, s_{ij}\big(x_j - s_i^{\top}x\big).
 \]
-The diversion ratio from $j$ to $k$ is
+Taking expectations over draws,
 \[
-D_{j\to k,\,11}
-= \frac{-\partial s_{k,11}/\partial p_{j,11}}{-\partial s_{0,11}/\partial p_{j,11}}
-= \frac{s_{k,11}}{1-s_{j,11}}.
-\]
-Relative to the no-FE estimates, $|\hat\alpha|$ typically increases (less attenuation from
-uncontrolled quality), so both own- and cross-price elasticities increase in magnitude, while
-diversion ratios---which depend only on market shares in MNL---remain unchanged.
-
-The results are presented below.
-
-\input{Hw1/repo/analysis/output/q10_fe_ols_price}
-
-
-\input{Hw1/repo/analysis/output/q10_elasticities_city1p1_fe}
-
-\input{Hw1/repo/analysis/output/q10_diversion_city1p1_fe}
-
-
-\subsection*{Question 11}
-
-Under Bertrand competition, the first-order conditions imply
-\[
-s_{ct} = \Delta_{ct}\,(p_{ct}-c_{ct}),
-\quad
-\Delta_{ct} = \hat\alpha \,\Omega \odot \big(\mathrm{diag}(s_{ct})-s_{ct}s_{ct}^\top\big),
-\]
-where $\Omega$ is the ownership matrix and $\odot$ denotes the Hadamard product. Hence
-\[
-\boxed{ \; c_{ct} = p_{ct} - \Delta_{ct}^{-1}\,s_{ct}\; }.
-\]
-If each firm sells a single product ($\Omega=I$), this reduces to
-\[
-p_{jct}-c_{jct}=\frac{s_{jct}}{\hat\alpha\,(1-s_{jct})},
+\frac{\partial s}{\partial \delta}
+=\mathbb{E}_i\!\left[\operatorname{diag}(s_i)-s_i s_i^{\top}\right] \equiv \mathbf{J},
 \qquad
-c_{jct}=p_{jct}-\frac{s_{jct}}{\hat\alpha\,(1-s_{jct})}.
+\left(\frac{\partial s}{\partial \sigma}\right)_j
+=\mathbb{E}_i\!\left[v_i\, s_{ij}\big(x_j - s_i^{\top}x\big)\right] \equiv (g_\sigma)_j.
 \]
-Using $\hat\alpha$ from the FE regression and the observed prices and shares in city 1 and
-period 1, we recover $c_{j11}$.
-
-Adding FE often raises implied marginal costs (markups fall with larger $|\hat\alpha|$), but FE
-do not remove within-market price endogeneity, measurement error in prices/shares, potential
-multi-product ownership, or misspecification of demand (IIA). Any of these can still yield
-implausible costs---including negative values (e.g., for Activia in this dataset). This is why FE
-alone may not be sufficient; one typically adds valid cost instruments and, if needed, a random
-coefficients demand system.
-
-
-
-
-\section{Logit Demand Model using cost shifters}
-
-\subsection*{Question 12}
-We instrument price with a cost shifter: for product $j$ in city $c$ and period $t$,
+Hence,
 \[
-Z_{jct}= \text{distance}_{cj}\times \text{diesel}_t .
+\boxed{
+\frac{\partial \delta(\sigma)}{\partial \sigma}
+= -\,\mathbf{J}^{-1}\,g_\sigma
+}
 \]
-In three-way fixed effects (product, city, period) model, identification of $\alpha$ comes from
-within-product price variation across cities/periods induced by $Z_{jct}$, while FE purge most time-invariant quality, city demand, and aggregate shocks. This specification is not equivalent to a model that only includes $X_j$: the FE specification removes many confounds that $X_j$ cannot capture and then uses $Z_{jct}$ to address remaining within-market price endogeneity. Hence IV with FE is more likely to deliver less biased own-price elasticities. Exclusion could fail if distance also shifts demand (e.g., freshness, shelf access) or if distribution-center locations are chosen endogenously.
+with $\mathbf{J}$ and $g_\sigma$ defined above. 
 
-\subsection*{Question 13}
-We estimate
+
+\section{Question 4}
+
+See  ``Hw2/repo/analysis/code/q4\_blp\_results.py" as reference of the algorithm.
+
+\section{Question 5}
+
+We construct a cost-shifter instrument following Problem Set~1:
 \[
-\log s_{jct}-\log s_{0,ct}=-\alpha p_{jct}+\tau_j+\tau_c+\tau_t+\varepsilon_{jct}
+Z^{CS}_{jct} = \text{distance}_{jc} \times \text{diesel}_t,
 \]
-by IV with $Z_{jct}$ and EHW (HC1) standard errors. Given $\hat\alpha$, own- and cross-price elasticities in market $(1,1)$ are
+where $\text{distance}_{jc}$ is the distance between city $c$ and product $j$'s distribution center, and $\text{diesel}_t$ is the diesel price in period $t$. This variable affects prices through marginal costs but is excluded from the demand equation. The final instrument matrix is
 \[
-\varepsilon_{jj}=-\hat\alpha\,p_j(1-s_j),\qquad
-\varepsilon_{jk}=\hat\alpha\,p_k s_k\;(k\neq j),
+Z = [Z^{CS},\ \text{product FE},\ \text{city FE},\ \text{time FE}],
+\quad W = (Z'Z)^{-1}.
 \]
-and diversion ratios are $D_{j\to k}= s_k/(1-s_j)$. Table 9 - 11 reports the results. Relative to OLS or FE-OLS, $|\hat\alpha|$ typically increases (correcting price endogeneity), so elasticities grow in magnitude, while diversion ratios are unchanged because they depend only on shares under MNL.
 
-\input{Hw1/repo/analysis/output/q13_iv_fe_price}
-\input{Hw1/repo/analysis/output/q13_elasticities_city1p1_ivfe}
-\input{Hw1/repo/analysis/output/q13_diversion_city1p1_ivfe}
-
-\subsection*{Question 14}
-Bertrand FOCs imply $s=\Delta(p-c)$ with
+For a given $\sigma$ and simulated heterogeneity draws $v_i$, we compute $\delta(\sigma)$ via the Berry contraction:
 \[
-\Delta=\hat\alpha\big(\Omega\odot(\mathrm{diag}(s)-ss^\top)\big).
+\delta^{(n+1)} = \delta^{(n)} + [\log s^{obs} - \log s(\delta^{(n)},\sigma)].
 \]
-With single-product firms ($\Omega=I$),
+We then estimate the linear parameters by IV:
 \[
-p_j-c_j=\frac{1}{\hat\alpha(1-s_j)},\qquad
-c_j=p_j-\frac{1}{\hat\alpha(1-s_j)} .
+\hat{\beta} = ((X'ZWZ'X)^{-1}X'ZWZ'\delta),
+\quad \hat{\xi} = \delta - X\hat{\beta}.
 \]
-Using prices and shares in city 1, period 1 with IV-FE $\hat\alpha$, we recover marginal costs. Costs are expected to be higher (markups smaller) than in FE-OLS; all costs are greater than 0.
-
-\input{Hw1/repo/analysis/output/q14_mc_city1p1_ivfe}
-
-\subsection*{Question 15}
-Algorithm to recover equilibrium prices with estimated $\hat\alpha$ and $c$:
-\begin{enumerate}\setlength{\itemsep}{0pt}
-\item Calibrate $\delta^{obs}_j=\log s_j-\log s_0+\hat\alpha\,p^{obs}_j$.
-\item Initialize $p^{(0)}=p^{obs}$. For iteration $t$:
-\begin{align*}
-\delta^{(t)}&=\delta^{obs}-\hat\alpha p^{(t)},\quad
-s^{(t)}=\frac{\exp(\delta^{(t)})}{1+\sum_k \exp(\delta^{(t)}_k)},\\
-\Delta^{(t)}&=\hat\alpha\big(\Omega\odot(\mathrm{diag}(s^{(t)})-s^{(t)}s^{(t)\top})\big),\\
-p^{(t+1)}&=c+\left(\Delta^{(t)}\right)^{-1}s^{(t)} .
-\end{align*}
-\item Stop when $\|p^{(t+1)}-p^{(t)}\|_\infty<\varepsilon$.
-\end{enumerate}
-Using $\Omega=I$ and $c_j=p^{obs}_j-1/[\hat\alpha(1-s_j)]$, the algorithm reproduces the observed prices for city 1, period 1 up to numerical error.
-
-\input{Hw1/repo/analysis/output/q15_recovered_prices_city1p1}
-
-\subsection*{Question 16}
-Counterfactual merger (Chobani + Dannon) with constant marginal costs: set $\Omega$ so that the two products share common ownership and resolve the fixed point above. Prices of the merged products increase because the firm internalizes cannibalization; rivals' prices typically rise as well by strategic complementarity.
-
-\input{Hw1/repo/analysis/output/q16_merger_prices_city1p1}
-
-\subsection*{Question 17}
-Consumer welfare in MNL is the inclusive value
+The GMM moments and objective function are:
 \[
-CS(p)=\frac{1}{\hat\alpha}\log\!\Big(1+\sum_j e^{\delta^{obs}_j-\hat\alpha p_j}\Big).
+m = \frac{1}{n}Z'\hat{\xi}, \qquad G(\sigma) = 10^6\, m'Wm.
 \]
-We compute $CS$ per capita with and without the merger using the fixed-point prices from above, and compare the difference to per-capita expenditure $\sum_j p_j s_j$. Consumers are typically worse off after the merger (higher prices reduce the inclusive value); the magnitude of the welfare loss relative to total expenditure is reported below.
 
-\input{Hw1/repo/analysis/output/q17_welfare_summary_city1p1}
-
-
-\section{Nested Logit Demand Model}
-
-\subsection*{Question 18}
-Under the standard logit, IIA forces substitution to be proportional to market shares. When Chobani and Dannon are both zero-sugar products, a price increase of one should mainly divert demand to the other, but IIA spreads diversion across all inside options and the outside good. This makes the cross-price elasticity between the two zero-sugar products biased downward, so a merger between them looks less harmful: markups and post-merger prices are understated and consumer-welfare losses are overstated less. A nested logit with a ``no-sugar'' nest allows within-nest correlation and concentrates substitution inside the nest, alleviating this bias.
-
-\subsection*{Question 19}
-Let $g$ index nests (no-sugar, sugary, outside). With single-level nested logit and correlation parameter $\rho\in[0,1)$, market shares factor as
+Evaluating at $\sigma = 0$ and $\sigma = 10$ gives nearly identical values:
 \[
-s_{jct}=s_{g,ct}\,s_{j|g,ct},
-\quad
-s_{j|g,ct}=\frac{\exp(\delta_{jct}/(1-\rho))}{\sum_{k\in g}\exp(\delta_{kct}/(1-\rho))}.
+G(0) = 1.45\times10^{-24}, \qquad G(10) = 1.44\times10^{-24},
 \]
-The estimating equation that depends only on product $j$'s observables and conditional share is
+
+
+
+\input{Hw2/repo/analysis/tables/q5_blp_costshifter_G}
+
+The objective function is essentially flat in $\sigma$, implying that the dispersion parameter is weakly identified. The reason that we cannot identify $\sigma$ is we do not have enough moment conditions for GMM.
+
+
+\section{Question 6}
+
+G(0) and G(10) are reported below:
+
+\input{Hw2/repo/analysis/tables/q6_blp_costshifter_plus_z_G}
+
+
+In Question 5, the objective function was nearly flat:
 \[
-\boxed{\ \log s_{jct}-\log s_{0,ct}
-= -\alpha\,p_{jct}+\rho\log s_{j|g,ct}+x_{j}'\beta+\tau_j+\tau_c+\tau_t+\varepsilon_{jct}\ }.
+G(0) \approx G(10) \approx 0,
 \]
-
-\subsection*{Question 20}
-We estimate the nested-logit equation by 2SLS with product/city/period fixed effects and EHW (HC1) standard errors. The instrument for price is ${\rm distance}_{cj}\times {\rm diesel}_t$; the instrument for $\log s_{j|g}$ is the (log) number of products in nest $g$ in market $(c,t)$. The estimates of $\alpha$ and $\rho$ are reported below.
-\input{Hw1/repo/analysis/output/q20_nested_ivfe}
-
-\subsection*{Question 21}
-Own- and cross-price elasticities in market $(1,1)$ follow the nested-logit formulas
+implying that for any value of $\sigma$ (or more generally, $\theta_2$), one can always find linear parameters $\hat{\beta}_0$ and $\hat{\alpha}$ such that
 \[
-\varepsilon_{jj}=-\hat\alpha\,p_j\big[1-\hat\rho(1-s_{j|g})-s_j\big],\qquad
-\varepsilon_{jk}=
-\begin{cases}
-\hat\alpha\,p_k\,[\hat\rho\,s_{k|g}-s_k], & k\in g,\ k\neq j,\\
-\hat\alpha\,p_k\,s_k, & k\notin g,
-\end{cases}
+\hat{\xi}(\theta_2)' Z W Z' \hat{\xi}(\theta_2) = 0.
 \]
-and diversion ratios are larger within nest than across nests. Tables:
-\input{Hw1/repo/analysis/output/q21_nl_elasticities_city1p1}
-\input{Hw1/repo/analysis/output/q21_nl_diversion_city1p1}
+In other words, the instruments in $Z$ (mainly the cost shifter and fixed effects) were sufficient to orthogonalize the residuals for any $\sigma$, leaving $G(\sigma)$ flat and $\sigma$ weakly identified.
 
-\subsection*{Question 22}
-With single-product firms, the Bertrand FOCs imply
+When we introduce the additional instrument
 \[
-p_j-c_j=\frac{1}{\hat\alpha\,[1-\hat\rho(1-s_{j|g})-s_j]},\qquad
-c_j=p_j-\frac{1}{\hat\alpha\,[1-\hat\rho(1-s_{j|g})-s_j]} .
+z_{ct} = \sum_{j \in (c,t)} X_j^s,
 \]
-Using prices and shares in city 1, period 1 with the IV-FE estimates $(\hat\alpha,\hat\rho)$ we obtain:
-\input{Hw1/repo/analysis/output/q22_nl_costs_city1p1}
-All costs are expected to be nonnegative; the cost of Activia should be approximately $0.1957$.
-
-\subsection*{Question 23}
-To simulate a merger between Chobani and Dannon while holding marginal costs fixed, we solve the pricing fixed point with an ownership matrix that sets the two products under common ownership. Prices of the merging products rise because the firm internalizes within-nest competition; rivals' prices typically increase by strategic complementarity. The table also reports the post-merger prices from the standard logit (Section 3); nested-logit post-merger prices are generally higher when $\hat\rho>0$.
-\input{Hw1/repo/analysis/output/q23_nl_merger_prices_city1p1}
-
-\subsection*{Question 24}
-Per-capita consumer surplus in nested logit is
+the matrix $Z$ now contains variation that is correlated with the nonlinear component
+$\sigma v_i (X_j^s - \bar{X}^s)$.
+Because this new instrument captures market-level differences in the distribution of
+$X_j^s$, changes in $\sigma$ affect $\delta(\sigma)$ in directions that $Z$ can no longer
+completely span. Consequently, $\hat{\xi}(\sigma)$ cannot be made perfectly orthogonal to $Z$
+for all $\sigma$, and
 \[
-CS(p)=\frac{1}{\hat\alpha}\log\!\Bigg(1+\sum_{g}\Big[\sum_{j\in g}e^{\delta^{obs}_j-\hat\alpha p_j\over 1-\hat\rho}\Big]^{1-\hat\rho}\Bigg).
+G(0) = 0.0049 \neq G(10) = 0.0058.
 \]
-Using the pre- and post-merger fixed-point prices from Question 23, we compute the welfare change and compare it to per-capita expenditure $\sum_j p_js_j$. Nested logit predicts larger welfare losses than the standard logit because within-nest substitution is stronger and the merger internalizes more cannibalization.
-\input{Hw1/repo/analysis/output/q24_nl_welfare_city1p1}
+This curvature in $G(\sigma)$ means that the moments are now informative about $\sigma$:
+the additional instrument helps identify $\theta_2$ by breaking the collinearity between the
+nonlinear term and the linear projection space of $X$.
+
+\section{Question 7}
+
+See below. $\partial G/\partial \sigma$ crosses zero when G($\sigma$) reach minimum. The shape of G($\sigma$) is symmetric, and reach global minimum at around -150 and 150, it have a local minimum point at $\sigma = 0$.
+
+\begin{figure}[H]
+    \centering % Centers the figure and caption within the text width
+\includegraphics[width=0.8\textwidth]{Hw2/repo/analysis/output/q7_Gsigma.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering % Centers the figure and caption within the text width
+\includegraphics[width=0.8\textwidth]{Hw2/repo/analysis/output/q7_dG.png}
+\end{figure}
+
+\section{Question 8}
+
+See below.
+
+\input{Hw2/repo/analysis/tables/blp_q8_newton_results}
+
+
+\section{Question 9}
+
+See below for the cross elasticities and the diversion ratios. We can find the own elasticity did not change much. But cross-elasticities substitution patterns are larger for products with similar market share and similar sugar content. This is because random coefficient breaks IIA, so similar products have higher substitution rates.
+
+\input{Hw2/repo/analysis/tables/q9_elasticities_city1_period1}
+
+\input{Hw2/repo/analysis/tables/q9_diversion_city1_period1}
+
+\section{Question 10}
+
+See below, all costs are positive.
+
+\input{Hw2/repo/analysis/tables/q10_results_city1_period1_single_market}
+
+
+\section{Question 11}
+
+See below. The prices of other products are similar to the predicts from the Logit and MNL model in PSet 1, but the BLP model predicts a higher merged prices. This is because there is not much cross elasticity to the sugar-free products, which let the firm able to set higher prices.
+
+\input{Hw2/repo/analysis/tables/q11_prices_counterfactual_city1_period1}
+
+\section{Question 12}
+
+See below. The welfare cost is -0.087, which is larger than results in Logit model -0.015 and nested logit model -0.061. This is consistent with our previous results showing that price of merged products increase more than in nest and non-nested models, which makes consumer in general worse off.
+
+\input{Hw2/repo/analysis/tables/q12_welfare_city1_period1}
+
+\section{Question 13}
+
+
+Problem Set #1 highlights  instruments and the choice of model are essential for identification. Problem Set #2 shows how BLP model reshape elasticities and diversion patterns, producing heterogeneous substitution across brands. Together they demonstrate that pricing, markups, and merger counterfactuals heavily depend on the model setting and the substitution pattern can be very important.
 
 \end{spacing}
 \end{document}
